# xfce4-brightness-plugin

./: .gitignore  GNUmakefile.in  README.md  autogen.sh  brightness.desktop  configure.ac  gresources.xml
src/: brightness-icon.vala  gamma-manager-x11.c  gamma-manager-x11.vala  gamma-manager.vala  plugin.c  popup-menu.ui  popup-menu.vala  settings-dialog.ui  settings-dialog.vala  slider-menu-item.vala
